--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,4 +4,7 @@ os: unstable
 install:
   - set QTDIR=C:\Qt\Qt5.3.2\5.3\mingw482_32
   - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+  - cmd: cinst wget -x86
+  - cmd: cinst 7zip.commandline -x86
   - mingw32-make qt_sdk_install
+  - mingw32-make arm_sdk_install
