--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,4 @@ install:
   - set PATH=%PATH%;%QTDIR%\bin
   - cmd: cinst wget -x86
   - cmd: cinst 7zip.commandline -x86
-  - cinst mingw-get
-  - set PATH=%PATH%;C:\MinGW\msys\1.0\bin;C:\MinGW\bin
-  - mingw-get install mingw-developer-toolkit
-  - bash mingw32-make arm_sdk_install
+  - mingw32-make arm_sdk_install
