--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,4 +7,5 @@ install:
   - cmd: cinst wget -x86
   - cmd: cinst 7zip.commandline -x86
 #  - mingw32-make arm_sdk_install
+  - dir C:\Qt\Qt5.4\
   - mingw32-make gcs
