--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,9 @@
 
 os: MinGW
 install:
-  - set QTDIR=C:\Qt\Qt5.4
+  - set QTDIR=C:\Qt\5.4
   - set PATH=%PATH%;%QTDIR%\bin;C:\Qt\Tools\mingw491_32\bin;C:\MinGW\bin
   - cmd: cinst wget -x86
   - cmd: cinst 7zip.commandline -x86
 #  - mingw32-make arm_sdk_install
-  - dir C:\Qt\Qt5.4\
   - mingw32-make gcs
